--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
   position: fixed;
   bottom: 0;
-  height: 350px;
+  height: 400px;
   width: 100vw;
   background-color: #111;
   display: flex;
@@ -9,11 +9,24 @@
   z-index: 10;
 }
 
+.titles {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .input-title {
   color: var(--clr-accent);
   font-weight: 300;
   margin: 0 16px;
   padding: 8px 0;
+}
+
+.tab {
+  color: var(--clr-light);
+  padding: 4px 16px;
+  text-align: right;
+  font-size: 18px;
 }
 
 .input {
@@ -38,5 +51,13 @@
     height: 100vh;
     width: 500px;
     background-color: #111;
+  }
+
+  .titles {
+    align-items: flex-start;
+  }
+
+  .tab {
+    padding: 16px;
   }
 }
