--- a/css/viewport.css
+++ b/css/viewport.css
@@ -34,7 +34,7 @@
 }
 
 .screen * {
-  pointer-events: none;
+  /* pointer-events: none; */
   font-size: 24px;
   padding: 4px 0;
   line-height: 1.5;
